# TeaLeaves

./: .gitignore  CLAUDE.md  README.md  RUN_INSTRUCTIONS.md  SKILL.md  pyproject.toml
docs/: KNOWN_GOOD_APPROACHES.md  PITFALLS.md
infra/: vastai_setup.sh
src/prompt_mechinterp/: __init__.py  _types.py  constants.py
src/prompt_mechinterp/analysis/: compare.py  metrics.py  report.py
src/prompt_mechinterp/prep/: inputs.py  regions.py
src/prompt_mechinterp/render/: _shared.py  aggregate.py  cooking_curves.py  heatmap.py  layer_gif.py  loaders.py
src/tealeaves/: __init__.py
src/tealeaves/analysis/: compare.py  report.py
src/tealeaves/engine/: model_adapter.py
src/tealeaves/prep/: inputs.py
src/tealeaves/render/: aggregate.py  cooking_curves.py  heatmap.py  layer_gif.py
tests/: test_constants.py
tests/analysis/: test_compare.py  test_formatting.py  test_metrics.py  test_report.py
tests/engine/: test_model_adapter.py
tests/prep/: test_inputs.py  test_regions.py
tests/render/: test_cooking_curves.py  test_shared.py
