[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tealeaves"
version = "0.1.0"
description = "End-to-end mechanistic interpretability pipeline for LLM prompts"
requires-python = ">=3.10"
dependencies = ["numpy", "Pillow"]

[project.optional-dependencies]
gpu = ["torch", "transformers", "accelerate", "safetensors", "huggingface_hub"]
dev = ["pytest", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/tealeaves"]
